# nbgo

./: # Setup  .env  .gitignore  .python-ignore-go.sh  BUILD_GUI.md  COMPLETE_GENERATION_REPORT.md  CONFIGURATION_MANAGER.md  CONFIGURATION_MANAGER_COMPLETION_REPORT.md  CONFIGURATION_MANAGER_SUMMARY.md  CONFIG_MANAGER_INDEX.md  ConfigurationManager.ipynb  DEVELOPMENT.md  Dockerfile  GUI_FEATURES.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_INDEX.md  INDEX.md  INSTALLATION.md  MANIFEST.md  Manager..py  QUICK_START_CONFIGURATION.md  README.md  ToolsConfiguration  build.sh  config.go  counts  docker-compose.yml  fix_networking_1.sh  fix_schema_ipynb.sh  fix_schema_ipynb_1.sh  fix_schema_ipynb_2.sh  fix_schema_ipynb_3.sh  fix_schema_ipynb_4.sh  fix_schema_ipynb_5.sh  fix_schema_ipynb_6.sh  go-promts.txt  go.mod  go.sum  main.go  main.py  (+8 more)
api/: api.go  dw.go  go.mod  go.sum  http.go  main.go  oanda.go  oandav20.go  orderbook.go
cli/: command.go  go.mod
conf/: config.go  db.toml  go.mod  manager.go  prometheus.yml
core/: go.mod  provider.go  sdk_provider.go
doc/: Nabla_Text_Mining_Flow.pptx  generator.go  go.mod
dw/: broker.go  dw.go  essence.go  go.mod  gw.go  logic.go  main.go  mentor.go  model.go  repository.go  router.go  serializer.go  service.go  warehouse.go
factory/: factory.go  factory_test.go  main.go
gui/: README.md  application.go  cmd.go  command_discovery.go  go.mod  keyboard_navigation.go  managers.go  session.go  settings.go  ui.go  view.go
gw/: gateway.go  go.mod  go.sum
hexagonal/: main.go
logs/: go.mod  logger.go
mb/: go.mod  messagebus.go
(+164 files in other folders)
