[project]
name = "nbgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.1",
    "asyncio==3.4.3",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.8.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "prometheus-client==0.20.0",
    "pylint==3.0.3",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "pyyaml==6.0.1",
    "pyzmq==25.1.1",
    "requests==2.31.0",
    "robotframework==7.0",
    "robotframework-seleniumlibrary==6.1.3",
]
